<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <ImageView
        android:layout_column="0"
        android:src="@mipmap/ic_launcher"
        android:layout_row="0"
        android:layout_gravity="right" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:text="@string/c_e_username"
        android:layout_row="1"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <EditText
        android:id="@+id/dialog_username"
        android:layout_column="1"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:layout_gravity="left"
        android:layout_row="1"
        android:inputType="text">
    </EditText>
    <TextView
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:text="@string/c_e_password"
        android:layout_row="2"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <EditText
        android:id="@+id/dialog_password"
        android:layout_width="match_parent"
        android:layout_column="1"
        android:layout_gravity="right"
        android:layout_row="2"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="3"
        android:gravity="center"
        android:text="@string/c_e_photo"
        android:textAlignment="center"
        android:textSize="10dp" />

</GridLayout>